Queda funcionando el cambio de fechas, se generan nuevos enfrentamientos mejor dicho que maravilla de código, está perfecto, terminado, culminado, falta estética, anda más

--- a/mavenproject1/src/main/java/com/mycompany/mavenproject1/Ventanas/VerTorneoAjedrez.form
+++ b/mavenproject1/src/main/java/com/mycompany/mavenproject1/Ventanas/VerTorneoAjedrez.form
@@ -64,9 +64,7 @@
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
                           <Component id="BotonAtras" min="-2" pref="144" max="-2" attributes="0"/>
-                          <EmptySpace max="-2" attributes="0"/>
-                          <Component id="EditarTorneosFutbol" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="124" max="-2" attributes="0"/>
                           <Component id="BotonSalir" min="-2" pref="143" max="-2" attributes="0"/>
                       </Group>
                   </Group>
@@ -99,7 +97,6 @@
                   </Group>
                   <EmptySpace pref="53" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="EditarTorneosFutbol" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="BotonAtras" alignment="3" max="32767" attributes="0"/>
                       <Component id="BotonSalir" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
@@ -198,14 +195,6 @@
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
           </AuxValues>
-        </Component>
-        <Component class="javax.swing.JButton" name="EditarTorneosFutbol">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Editar Torneo"/>
-          </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="EditarTorneosFutbolActionPerformed"/>
-          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="BotonAtras">
           <Properties>
